# eclipse_battle_sim

./: Cargo.toml  README.md
.github/workflows/: main.yml
simulator/: Cargo.toml
simulator/benches/: bench.rs
simulator/src/: lib.rs  main.rs  simulator.rs
src/: lib.rs  main.rs  simulator.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts  simulationWorker.ts
web/src/assets/: base.css  main.css
web/src/components/: Counter.vue  ShipData.ts  ShipDisplay.vue
