[package]
name = "eclipse_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
getrandom = {version = "0.2.15", features = ["js"]}
rand = {version = "0.8.5", features = []}
itertools = "0.14.0"

wasm-bindgen = "0.2.100"
console_error_panic_hook = {version = "0.1.7", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
