[package]
name = "eclipse_sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = {version = "0.3", features = ["wasm_js"]}
rand = {version = "0.9", features = []}
itertools = "0.14.0"

wasm-bindgen = "0.2.100"
console_error_panic_hook = {version = "0.1.7", optional = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
console_log = {version = "1.0", optional = true}
env_logger = {version = "0.9"}
cfg-if = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
criterion = {version = "0.5"}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "bench"
harness = false
